force-app/main/default/objects/SalesRevenueDetailsLines__c/SalesRevenueDetailsLines__c.object-meta.xml
<CustomObject>
    <label>销售业绩行</label>
    <nameField>
        <displayFormat>SRD-{000000}</displayFormat>
        <label>销售业绩行编号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>