force-app/main/default/objects/SalesRevenueDetailsLines__c/fields/CCECActualAmount__c.field-meta.xml
<CustomField>
    <fullName>CCECActualAmount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>CCEC完成金额</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>