force-app/main/default/objects/SalesRevenueDetailsLines__c/fields/DCECActualQty__c.field-meta.xml
<CustomField>
    <fullName>DCECActualQty__c</fullName>
    <defaultValue>0</defaultValue>
    <label>DCEC完成台数</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>