force-app/main/default/objects/SalesRevenueDetailsLines__c/fields/SalesRevenue__c.field-meta.xml
<CustomField>
    <fullName>SalesRevenue__c</fullName>
    <label>销售业绩</label>
    <referenceTo>SalesRevenue__c</referenceTo>
    <relationshipLabel>销售业绩行</relationshipLabel>
    <relationshipName>SalesRevenuehcUi</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>